@@ -48,7 +48,7 @@ def crossGetList(self, dir_id, field_id, value):
 
 fieldStorageNamespace.register('dirCrossGetList', crossGetList)
 
-def crossSetList(self, dir_id, field_id, value, entry_ids):
+def crossSetList(self, dir_id, field_id, value, entry_ids, value_search=None):
     """Update the field 'field_id' of 'dir_id' so that only entries of
     'dir_id' occuring in 'entry_ids' have 'value' in 'field_id'
 
@@ -57,12 +57,18 @@ def crossSetList(self, dir_id, field_id, value, entry_ids):
     This method is used in the computed 'members' field of the groups
     directory's schema to write the list of members that belong to some
     group.
+
+    'value_search' is used in cases where searches in 'dir_id' have different
+    semantics than gets and sets. Namely, the lookup of entries that
+    hold 'value' will be done using 'value_search'.
     """
     dtool = getToolByName(self, 'portal_directories')
     dir = dtool[dir_id]
     entry_ids = set(entry_ids)
+    if value_search is None:
+        value_search = value
     with_value = dir._searchEntries(return_fields=[field_id],
-                                    **{field_id: [value]})
+                                    **{field_id: [value_search]})
     ids_with_value = [id for id, e in with_value]
     for id, entry in with_value:
         if id in entry_ids:
